# browseraudio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy-demo.yml  tests.yml
browseraudio/: __init__.py  _env.py  _player.py  _recorder.py  sounddevice.py
browseraudio/static/: player.js  recorder.js
demo/: README.md  how-it-works.html  index.html  play.html  record.html  vendor-thebe.sh
demo/assets/: demo.js  live.css  live.js  style.css
tests/: conftest.py  test_env.py  test_package.py  test_player.py  test_recorder.py  test_sounddevice.py
