[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "browseraudio"
version = "0.0.2"
description = "Microphone capture for in-browser Python (Pyodide / JupyterLite) via the Web Audio API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["pyodide", "jupyterlite", "web audio", "microphone", "anywidget", "wasm"]
dependencies = [
    "anywidget>=0.9",
    "numpy",
]

[project.optional-dependencies]
pyquist = ["pyquist"]

[tool.setuptools]
packages = ["browseraudio"]

[tool.setuptools.package-data]
browseraudio = ["static/*.js"]
