[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "browseraudio"
version = "0.1.1"
description = "Microphone capture for in-browser Python (Pyodide / JupyterLite) via the Web Audio API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "jiaweil6" }]
keywords = ["pyodide", "jupyterlite", "web audio", "microphone", "anywidget", "wasm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Framework :: Jupyter",
]
dependencies = [
    "anywidget>=0.9",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/jiaweil6/browseraudio"
Repository = "https://github.com/jiaweil6/browseraudio"
Issues = "https://github.com/jiaweil6/browseraudio/issues"

[project.optional-dependencies]
pyquist = ["pyquist"]

[tool.setuptools]
packages = ["browseraudio"]

[tool.setuptools.package-data]
browseraudio = ["static/*.js"]
